applications/tutorial_bias_advertising/deployment/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tutorial-bias-advertising
  namespace: tutorial-bias-advertising
  labels:
    app: tutorial-bias-advertising
    app.kubernetes.io/component: tutorial-bias-advertising
    app.kubernetes.io/instance: tutorial-bias-advertising
    app.kubernetes.io/name: tutorial-bias-advertising
    app.kubernetes.io/part-of: tutorial-bias-advertising
spec:
  to:
    kind: Service
    name: tutorial-bias-advertising
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
